--- a/helm/cluster-api/templates/delete-aggregated-roles/job.yaml
+++ b/helm/cluster-api/templates/delete-aggregated-roles/job.yaml
@@ -19,6 +19,7 @@ spec:
       - name: kubectl
         securityContext:
           runAsNonRoot: true
+          runAsUser: 1000
           allowPrivilegeEscalation: false
           seccompProfile:
             type: RuntimeDefault
@@ -26,7 +27,7 @@ spec:
             drop:
             - ALL
           readOnlyRootFilesystem: true
-        image: "{{ .Values.registry.domain }}/giantswarm/kubectl:1.32.1"
+        image: "{{ .Values.registry.domain }}/giantswarm/docker-kubectl:1.33.4"
         args:
         - delete
         - clusterrole
