--- a/helm/cluster-api/files/bootstrap/kustomization.yaml
+++ b/helm/cluster-api/files/bootstrap/kustomization.yaml
@@ -20,6 +20,12 @@ patches:
       version: v1
       kind: CustomResourceDefinition
       name: kubeadmconfigs.bootstrap.cluster.x-k8s.io
+  - path: patches/versions/v1beta2/kubeadmconfigs.bootstrap.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: kubeadmconfigs.bootstrap.cluster.x-k8s.io
   - path: patches/versions/v1alpha3/kubeadmconfigtemplates.bootstrap.cluster.x-k8s.io.yaml
     target:
       group: apiextensions.k8s.io
@@ -33,6 +39,12 @@ patches:
       kind: CustomResourceDefinition
       name: kubeadmconfigtemplates.bootstrap.cluster.x-k8s.io
   - path: patches/versions/v1beta1/kubeadmconfigtemplates.bootstrap.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: kubeadmconfigtemplates.bootstrap.cluster.x-k8s.io
+  - path: patches/versions/v1beta2/kubeadmconfigtemplates.bootstrap.cluster.x-k8s.io.yaml
     target:
       group: apiextensions.k8s.io
       version: v1
