--- a/helm/cluster-api/files/controlplane/bases/kubeadmcontrolplanes.controlplane.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/controlplane/bases/kubeadmcontrolplanes.controlplane.cluster.x-k8s.io.yaml
@@ -3,7 +3,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: '{{ .Release.Namespace }}/capi-kubeadm-control-plane-serving-cert'
-    controller-gen.kubebuilder.io/version: v0.17.2
+    controller-gen.kubebuilder.io/version: v0.18.0
   labels:
     app.kubernetes.io/instance: '{{ .Release.Name }}'
     app.kubernetes.io/managed-by: '{{ .Release.Service }}'
@@ -11,6 +11,7 @@ metadata:
     app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
     cluster.x-k8s.io/provider: control-plane-kubeadm
     cluster.x-k8s.io/v1beta1: v1beta1
+    cluster.x-k8s.io/v1beta2: v1beta2
     clusterctl.cluster.x-k8s.io: ""
     clusterctl.cluster.x-k8s.io/move: ""
     helm.sh/chart: cluster-api
@@ -166,7 +167,64 @@ spec:
           jsonPath: .spec.version
           name: Version
           type: string
+      deprecated: true
       name: v1beta1
+      schema: {}
+      served: true
+      storage: false
+      subresources:
+        scale:
+          labelSelectorPath: .status.selector
+          specReplicasPath: .spec.replicas
+          statusReplicasPath: .status.replicas
+        status: {}
+    - additionalPrinterColumns:
+        - description: Cluster
+          jsonPath: .metadata.labels['cluster\.x-k8s\.io/cluster-name']
+          name: Cluster
+          type: string
+        - description: Cluster pass all availability checks
+          jsonPath: .status.conditions[?(@.type=="Available")].status
+          name: Available
+          type: string
+        - description: The desired number of machines
+          jsonPath: .spec.replicas
+          name: Desired
+          type: integer
+        - description: The number of machines
+          jsonPath: .status.replicas
+          name: Current
+          type: integer
+        - description: The number of machines with Ready condition true
+          jsonPath: .status.readyReplicas
+          name: Ready
+          type: integer
+        - description: The number of machines with Available condition true
+          jsonPath: .status.availableReplicas
+          name: Available
+          type: integer
+        - description: The number of machines with UpToDate condition true
+          jsonPath: .status.upToDateReplicas
+          name: Up-to-date
+          type: integer
+        - description: Reconciliation paused
+          jsonPath: .status.conditions[?(@.type=="Paused")].status
+          name: Paused
+          priority: 10
+          type: string
+        - description: This denotes whether or not the control plane can accept requests
+          jsonPath: .status.initialization.controlPlaneInitialized
+          name: Initialized
+          type: boolean
+        - description: Time duration since creation of KubeadmControlPlane
+          jsonPath: .metadata.creationTimestamp
+          name: Age
+          type: date
+        - description: Kubernetes version associated with this control plane
+          jsonPath: .spec.version
+          name: Version
+          type: string
+      name: v1beta2
       schema: {}
       served: true
       storage: true
