--- a/helm/cluster-api/files/controlplane/kustomization.yaml
+++ b/helm/cluster-api/files/controlplane/kustomization.yaml
@@ -20,6 +20,12 @@ patches:
       version: v1
       kind: CustomResourceDefinition
       name: kubeadmcontrolplanes.controlplane.cluster.x-k8s.io
+  - path: patches/versions/v1beta2/kubeadmcontrolplanes.controlplane.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: kubeadmcontrolplanes.controlplane.cluster.x-k8s.io
   - path: patches/versions/v1alpha4/kubeadmcontrolplanetemplates.controlplane.cluster.x-k8s.io.yaml
     target:
       group: apiextensions.k8s.io
@@ -27,6 +33,12 @@ patches:
       kind: CustomResourceDefinition
       name: kubeadmcontrolplanetemplates.controlplane.cluster.x-k8s.io
   - path: patches/versions/v1beta1/kubeadmcontrolplanetemplates.controlplane.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: kubeadmcontrolplanetemplates.controlplane.cluster.x-k8s.io
+  - path: patches/versions/v1beta2/kubeadmcontrolplanetemplates.controlplane.cluster.x-k8s.io.yaml
     target:
       group: apiextensions.k8s.io
       version: v1
