--- a/helm/cluster-api/files/core/bases/machinedeployments.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/bases/machinedeployments.cluster.x-k8s.io.yaml
@@ -3,7 +3,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: '{{ .Release.Namespace }}/capi-serving-cert'
-    controller-gen.kubebuilder.io/version: v0.17.2
+    controller-gen.kubebuilder.io/version: v0.18.0
   labels:
     app.kubernetes.io/instance: '{{ .Release.Name }}'
     app.kubernetes.io/managed-by: '{{ .Release.Service }}'
@@ -149,7 +149,64 @@ spec:
           jsonPath: .spec.template.spec.version
           name: Version
           type: string
+      deprecated: true
       name: v1beta1
+      schema: {}
+      served: true
+      storage: false
+      subresources:
+        scale:
+          labelSelectorPath: .status.selector
+          specReplicasPath: .spec.replicas
+          statusReplicasPath: .status.replicas
+        status: {}
+    - additionalPrinterColumns:
+        - description: Cluster
+          jsonPath: .spec.clusterName
+          name: Cluster
+          type: string
+        - description: Cluster pass all availability checks
+          jsonPath: .status.conditions[?(@.type=="Available")].status
+          name: Available
+          type: string
+        - description: The desired number of machines
+          jsonPath: .spec.replicas
+          name: Desired
+          type: integer
+        - description: The number of machines
+          jsonPath: .status.replicas
+          name: Current
+          type: integer
+        - description: The number of machines with Ready condition true
+          jsonPath: .status.readyReplicas
+          name: Ready
+          type: integer
+        - description: The number of machines with Available condition true
+          jsonPath: .status.availableReplicas
+          name: Available
+          type: integer
+        - description: The number of machines with UpToDate condition true
+          jsonPath: .status.upToDateReplicas
+          name: Up-to-date
+          type: integer
+        - description: Reconciliation paused
+          jsonPath: .status.conditions[?(@.type=="Paused")].status
+          name: Paused
+          priority: 10
+          type: string
+        - description: MachineDeployment status such as ScalingUp/ScalingDown/Running/Failed/Unknown
+          jsonPath: .status.phase
+          name: Phase
+          type: string
+        - description: Time duration since creation of MachineDeployment
+          jsonPath: .metadata.creationTimestamp
+          name: Age
+          type: date
+        - description: Kubernetes version associated with this MachineDeployment
+          jsonPath: .spec.template.spec.version
+          name: Version
+          type: string
+      name: v1beta2
       schema: {}
       served: true
       storage: true
