--- a/helm/cluster-api/files/core/bases/machinedrainrules.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/bases/machinedrainrules.cluster.x-k8s.io.yaml
@@ -3,7 +3,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: '{{ .Release.Namespace }}/capi-serving-cert'
-    controller-gen.kubebuilder.io/version: v0.17.2
+    controller-gen.kubebuilder.io/version: v0.18.0
   labels:
     app.kubernetes.io/instance: '{{ .Release.Name }}'
     app.kubernetes.io/managed-by: '{{ .Release.Service }}'
@@ -50,7 +50,26 @@ spec:
           jsonPath: .metadata.creationTimestamp
           name: Age
           type: date
+      deprecated: true
       name: v1beta1
+      schema: {}
+      served: true
+      storage: false
+      subresources: {}
+    - additionalPrinterColumns:
+        - description: Drain behavior
+          jsonPath: .spec.drain.behavior
+          name: Behavior
+          type: string
+        - description: Drain order
+          jsonPath: .spec.drain.order
+          name: Order
+          type: string
+        - description: Time duration since creation of the MachineDrainRule
+          jsonPath: .metadata.creationTimestamp
+          name: Age
+          type: date
+      name: v1beta2
       schema: {}
       served: true
       storage: true
