--- a/helm/cluster-api/files/core/bases/machines.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/bases/machines.cluster.x-k8s.io.yaml
@@ -3,7 +3,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: '{{ .Release.Namespace }}/capi-serving-cert'
-    controller-gen.kubebuilder.io/version: v0.17.2
+    controller-gen.kubebuilder.io/version: v0.18.0
   labels:
     app.kubernetes.io/instance: '{{ .Release.Name }}'
     app.kubernetes.io/managed-by: '{{ .Release.Service }}'
@@ -122,7 +122,72 @@ spec:
           jsonPath: .spec.version
           name: Version
           type: string
+      deprecated: true
       name: v1beta1
+      schema: {}
+      served: true
+      storage: false
+      subresources:
+        status: {}
+    - additionalPrinterColumns:
+        - description: Cluster
+          jsonPath: .spec.clusterName
+          name: Cluster
+          type: string
+        - description: Node name associated with this machine
+          jsonPath: .status.nodeRef.name
+          name: Node Name
+          type: string
+        - description: Provider ID
+          jsonPath: .spec.providerID
+          name: Provider ID
+          priority: 10
+          type: string
+        - description: Machine pass all readiness checks
+          jsonPath: .status.conditions[?(@.type=="Ready")].status
+          name: Ready
+          type: string
+        - description: Machine is Ready for at least MinReadySeconds
+          jsonPath: .status.conditions[?(@.type=="Available")].status
+          name: Available
+          type: string
+        - description: ' Machine spec matches the spec of the Machine''s owner resource, e.g. MachineDeployment'
+          jsonPath: .status.conditions[?(@.type=="UpToDate")].status
+          name: Up-to-date
+          type: string
+        - description: Internal IP of the machine
+          jsonPath: .status.addresses[?(@.type=="InternalIP")].address
+          name: Internal-IP
+          priority: 10
+          type: string
+        - description: External IP of the machine
+          jsonPath: .status.addresses[?(@.type=="ExternalIP")].address
+          name: External-IP
+          priority: 10
+          type: string
+        - description: OS Image reported by the node
+          jsonPath: .status.nodeInfo.osImage
+          name: OS-Image
+          priority: 10
+          type: string
+        - description: Reconciliation paused
+          jsonPath: .status.conditions[?(@.type=="Paused")].status
+          name: Paused
+          priority: 10
+          type: string
+        - description: Machine status such as Terminating/Pending/Running/Failed etc
+          jsonPath: .status.phase
+          name: Phase
+          type: string
+        - description: Time duration since creation of Machine
+          jsonPath: .metadata.creationTimestamp
+          name: Age
+          type: date
+        - description: Kubernetes version associated with this Machine
+          jsonPath: .spec.version
+          name: Version
+          type: string
+      name: v1beta2
       schema: {}
       served: true
       storage: true
