--- a/helm/cluster-api/files/core/kustomization.yaml
+++ b/helm/cluster-api/files/core/kustomization.yaml
@@ -25,6 +25,12 @@ patches:
       version: v1
       kind: CustomResourceDefinition
       name: clusterclasses.cluster.x-k8s.io
+  - path: patches/versions/v1beta2/clusterclasses.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: clusterclasses.cluster.x-k8s.io
   - path: patches/versions/v1alpha3/clusterresourcesetbindings.addons.cluster.x-k8s.io.yaml
     target:
       group: apiextensions.k8s.io
@@ -38,6 +44,12 @@ patches:
       kind: CustomResourceDefinition
       name: clusterresourcesetbindings.addons.cluster.x-k8s.io
   - path: patches/versions/v1beta1/clusterresourcesetbindings.addons.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: clusterresourcesetbindings.addons.cluster.x-k8s.io
+  - path: patches/versions/v1beta2/clusterresourcesetbindings.addons.cluster.x-k8s.io.yaml
     target:
       group: apiextensions.k8s.io
       version: v1
@@ -61,6 +73,12 @@ patches:
       version: v1
       kind: CustomResourceDefinition
       name: clusterresourcesets.addons.cluster.x-k8s.io
+  - path: patches/versions/v1beta2/clusterresourcesets.addons.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: clusterresourcesets.addons.cluster.x-k8s.io
   - path: patches/versions/v1alpha3/clusters.cluster.x-k8s.io.yaml
     target:
       group: apiextensions.k8s.io
@@ -79,7 +97,19 @@ patches:
       version: v1
       kind: CustomResourceDefinition
       name: clusters.cluster.x-k8s.io
+  - path: patches/versions/v1beta2/clusters.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: clusters.cluster.x-k8s.io
   - path: patches/versions/v1alpha1/extensionconfigs.runtime.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: extensionconfigs.runtime.cluster.x-k8s.io
+  - path: patches/versions/v1beta2/extensionconfigs.runtime.cluster.x-k8s.io.yaml
     target:
       group: apiextensions.k8s.io
       version: v1
@@ -97,6 +127,12 @@ patches:
       version: v1
       kind: CustomResourceDefinition
       name: ipaddressclaims.ipam.cluster.x-k8s.io
+  - path: patches/versions/v1beta2/ipaddressclaims.ipam.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: ipaddressclaims.ipam.cluster.x-k8s.io
   - path: patches/versions/v1alpha1/ipaddresses.ipam.cluster.x-k8s.io.yaml
     target:
       group: apiextensions.k8s.io
@@ -104,6 +140,12 @@ patches:
       kind: CustomResourceDefinition
       name: ipaddresses.ipam.cluster.x-k8s.io
   - path: patches/versions/v1beta1/ipaddresses.ipam.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: ipaddresses.ipam.cluster.x-k8s.io
+  - path: patches/versions/v1beta2/ipaddresses.ipam.cluster.x-k8s.io.yaml
     target:
       group: apiextensions.k8s.io
       version: v1
@@ -127,7 +169,19 @@ patches:
       version: v1
       kind: CustomResourceDefinition
       name: machinedeployments.cluster.x-k8s.io
+  - path: patches/versions/v1beta2/machinedeployments.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: machinedeployments.cluster.x-k8s.io
   - path: patches/versions/v1beta1/machinedrainrules.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: machinedrainrules.cluster.x-k8s.io
+  - path: patches/versions/v1beta2/machinedrainrules.cluster.x-k8s.io.yaml
     target:
       group: apiextensions.k8s.io
       version: v1
@@ -151,6 +205,12 @@ patches:
       version: v1
       kind: CustomResourceDefinition
       name: machinehealthchecks.cluster.x-k8s.io
+  - path: patches/versions/v1beta2/machinehealthchecks.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: machinehealthchecks.cluster.x-k8s.io
   - path: patches/versions/v1alpha3/machinepools.cluster.x-k8s.io.yaml
     target:
       group: apiextensions.k8s.io
@@ -164,6 +224,12 @@ patches:
       kind: CustomResourceDefinition
       name: machinepools.cluster.x-k8s.io
   - path: patches/versions/v1beta1/machinepools.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: machinepools.cluster.x-k8s.io
+  - path: patches/versions/v1beta2/machinepools.cluster.x-k8s.io.yaml
     target:
       group: apiextensions.k8s.io
       version: v1
@@ -187,6 +253,12 @@ patches:
       version: v1
       kind: CustomResourceDefinition
       name: machines.cluster.x-k8s.io
+  - path: patches/versions/v1beta2/machines.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: machines.cluster.x-k8s.io
   - path: patches/versions/v1alpha3/machinesets.cluster.x-k8s.io.yaml
     target:
       group: apiextensions.k8s.io
@@ -200,6 +272,12 @@ patches:
       kind: CustomResourceDefinition
       name: machinesets.cluster.x-k8s.io
   - path: patches/versions/v1beta1/machinesets.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: machinesets.cluster.x-k8s.io
+  - path: patches/versions/v1beta2/machinesets.cluster.x-k8s.io.yaml
     target:
       group: apiextensions.k8s.io
       version: v1
