--- a/helm/cluster-api/files/core/patches/versions/v1beta1/machinepools.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1beta1/machinepools.cluster.x-k8s.io.yaml
@@ -61,38 +61,6 @@
                 This is a pointer to distinguish between explicit zero and not specified.
               format: int32
               type: integer
-            strategy:
-              description: strategy defines how to replace existing machines with new ones.
-              properties:
-                remediation:
-                  description: |-
-                    remediation controls the strategy of remediating unhealthy machines
-                    as marked by a MachineHealthCheck. This only applies to infrastructure
-                    providers supporting "MachinePool Machines". For other providers,
-                    no remediation is done.
-                  properties:
-                    maxInFlight:
-                      anyOf:
-                        - type: integer
-                        - type: string
-                      description: |-
-                        maxInFlight determines how many in flight remediations should happen at the same time.
-
-                        Remediation only happens on the MachineSet with the most current revision, while
-                        older MachineSets (usually present during rollout operations) aren't allowed to remediate.
-
-                        Note: In general (independent of remediations), unhealthy machines are always
-                        prioritized during scale down operations over healthy ones.
-
-                        MaxInFlight can be set to a fixed number or a percentage.
-                        Example: when this is set to 20%, the MachineSet controller deletes at most 20% of
-                        the desired replicas.
-
-                        If not set, remediation is limited to all machines (bounded by replicas)
-                        under the active MachineSet's management.
-                      x-kubernetes-int-or-string: true
-                  type: object
-              type: object
             template:
               description: template describes the machines that will be created.
               properties:
@@ -404,7 +372,7 @@
                 failureMessage indicates that there is a problem reconciling the state,
                 and will be set to a descriptive error message.
 
-                Deprecated: This field is deprecated and is going to be removed in the next apiVersion. Please see https://github.com/kubernetes-sigs/cluster-api/blob/main/docs/proposals/20240916-improve-status-in-CAPI-resources.md for more details.
+                Deprecated: This field is deprecated and is going to be removed when support for v1beta1 will be dropped. Please see https://github.com/kubernetes-sigs/cluster-api/blob/main/docs/proposals/20240916-improve-status-in-CAPI-resources.md for more details.
               maxLength: 10240
               minLength: 1
               type: string
@@ -413,7 +381,7 @@
                 failureReason indicates that there is a problem reconciling the state, and
                 will be set to a token value suitable for programmatic interpretation.
 
-                Deprecated: This field is deprecated and is going to be removed in the next apiVersion. Please see https://github.com/kubernetes-sigs/cluster-api/blob/main/docs/proposals/20240916-improve-status-in-CAPI-resources.md for more details.
+                Deprecated: This field is deprecated and is going to be removed when support for v1beta1 will be dropped. Please see https://github.com/kubernetes-sigs/cluster-api/blob/main/docs/proposals/20240916-improve-status-in-CAPI-resources.md for more details.
               type: string
             infrastructureReady:
               description: infrastructureReady is the state of the infrastructure provider.
@@ -499,7 +467,7 @@
                 be machine instances that are running but not yet available or machine instances
                 that still have not been created.
 
-                Deprecated: This field is deprecated and is going to be removed in the next apiVersion. Please see https://github.com/kubernetes-sigs/cluster-api/blob/main/docs/proposals/20240916-improve-status-in-CAPI-resources.md for more details.
+                Deprecated: This field is deprecated and is going to be removed when support for v1beta1 will be dropped. Please see https://github.com/kubernetes-sigs/cluster-api/blob/main/docs/proposals/20240916-improve-status-in-CAPI-resources.md for more details.
               format: int32
               type: integer
             v1beta2:
