--- a/helm/cluster-api/files/core/patches/versions/v1beta1/machines.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1beta1/machines.cluster.x-k8s.io.yaml
@@ -362,7 +362,7 @@
                 can be added as events to the Machine object and/or logged in the
                 controller's output.
 
-                Deprecated: This field is deprecated and is going to be removed in the next apiVersion. Please see https://github.com/kubernetes-sigs/cluster-api/blob/main/docs/proposals/20240916-improve-status-in-CAPI-resources.md for more details.
+                Deprecated: This field is deprecated and is going to be removed when support for v1beta1 will be dropped. Please see https://github.com/kubernetes-sigs/cluster-api/blob/main/docs/proposals/20240916-improve-status-in-CAPI-resources.md for more details.
               maxLength: 10240
               minLength: 1
               type: string
@@ -385,7 +385,7 @@
                 can be added as events to the Machine object and/or logged in the
                 controller's output.
 
-                Deprecated: This field is deprecated and is going to be removed in the next apiVersion. Please see https://github.com/kubernetes-sigs/cluster-api/blob/main/docs/proposals/20240916-improve-status-in-CAPI-resources.md for more details.
+                Deprecated: This field is deprecated and is going to be removed when support for v1beta1 will be dropped. Please see https://github.com/kubernetes-sigs/cluster-api/blob/main/docs/proposals/20240916-improve-status-in-CAPI-resources.md for more details.
               type: string
             infrastructureReady:
               description: infrastructureReady is the state of the infrastructure provider.
@@ -429,6 +429,14 @@
                 osImage:
                   description: OS Image reported by the node from /etc/os-release (e.g. Debian GNU/Linux 7 (wheezy)).
                   type: string
+                swap:
+                  description: Swap Info reported by the node.
+                  properties:
+                    capacity:
+                      description: Total amount of swap memory in bytes.
+                      format: int64
+                      type: integer
+                  type: object
                 systemUUID:
                   description: |-
                     SystemUUID reported by the node. For unique machine identification
