--- a/helm/cluster-api/charts/crd-install/templates/job.yaml
+++ b/helm/cluster-api/charts/crd-install/templates/job.yaml
@@ -1,4 +1,3 @@
-{{- if .Values.crds.install }}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -27,7 +26,7 @@ spec:
             drop:
             - ALL
           readOnlyRootFilesystem: true
-        image: "{{ .Values.registry.domain }}/giantswarm/docker-kubectl:1.33.4"
+        image: "{{ .Values.image.registry }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
         args:
         - apply
         - --kustomize
@@ -64,4 +63,3 @@ spec:
         effect: NoSchedule
       restartPolicy: Never
   backoffLimit: 4
-{{- end }}
