--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -8,6 +8,11 @@ resources:
 - bases/networkpolicies/capi-controller-manager.yaml
 - bases/networkpolicies/capi-kubeadm-bootstrap-controller-manager.yaml
 - bases/networkpolicies/capi-kubeadm-control-plane-controller-manager.yaml
+# Service monitors
+- bases/servicemonitors/capi-metrics-servicemonitor.yaml
+- bases/servicemonitors/capi-kubeadm-bootstrap-metrics-servicemonitor.yaml
+- bases/servicemonitors/capi-kubeadm-control-plane-metrics-servicemonitor.yaml
+
 
 namespace: "{{ .Release.Namespace }}"
 
