add servicemonitors for metrics endpoints (#313)
* add servicemonitors for metrics endpoints

Signed-off-by: Xander Grzywinski <xander@giantswarm.io>

* add newlines

Signed-off-by: Xander Grzywinski <xander@giantswarm.io>

* update resource naming and changelog

Signed-off-by: Xander Grzywinski <xander@giantswarm.io>

* make generate

Signed-off-by: Xander Grzywinski <xander@giantswarm.io>

* Apply suggestions from code review

---------

Signed-off-by: Xander Grzywinski <xander@giantswarm.io>
Co-authored-by: Marco Ebert <marco_ebert@icloud.com>

--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -8,6 +8,10 @@ resources:
 - bases/networkpolicies/capi-controller-manager.yaml
 - bases/networkpolicies/capi-kubeadm-bootstrap-controller-manager.yaml
 - bases/networkpolicies/capi-kubeadm-control-plane-controller-manager.yaml
+# Service monitors
+- bases/servicemonitors/capi-controller-manager.yaml
+- bases/servicemonitors/capi-kubeadm-bootstrap-controller-manager.yaml
+- bases/servicemonitors/capi-kubeadm-control-plane-controller-manager.yaml
 
 namespace: "{{ .Release.Namespace }}"
 
