--- a/.abs/main.yaml
+++ b/.abs/main.yaml
@@ -3,4 +3,5 @@ generate-metadata: true
 chart-dir: ./helm/cluster-api
 destination: build
 catalog-base-url: https://giantswarm.github.io/control-plane-test-catalog/
+kubelinter-config: .abs/.kube-linter.yaml
 
